force-app/main/default/objects/RoastBatch__c/RoastBatch__c.object-meta.xml
<CustomObject>
    <label>Roast Batch</label>
    <pluralLabel>Roast Batches</pluralLabel>
    <nameField>
        <displayFormat>BATCH-{YYYY}-{00000}</displayFormat>
        <label>Batch Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>