force-app/main/default/objects/RoastBatch__c/fields/QuantityKg__c.field-meta.xml
<CustomField>
    <fullName>QuantityKg__c</fullName>
    <label>Quantity (kg)</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>2</scale>
    <required>true</required>
</CustomField>