force-app/main/default/objects/RoastBatch__c/fields/ReservedKg__c.field-meta.xml
<CustomField>
    <fullName>ReservedKg__c</fullName>
    <label>Reserved (kg)</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>2</scale>
    <defaultValue>0</defaultValue>
</CustomField>