force-app/main/default/objects/RoastBatch__c/fields/RoastDate__c.field-meta.xml
<CustomField>
    <fullName>RoastDate__c</fullName>
    <label>Roast Date</label>
    <type>Date</type>
    <required>true</required>
</CustomField>